<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >SWE-App
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="btnMon">Mo</string>
    <string name="btnTue">Di</string>
    <string name="btnWed">Mi</string>
    <string name="btnThu">Do</string>
    <string name="btnFri">Fr</string>
    <string name="btnSat">Sa</string>
    <string name="btnSun">So</string>
    <string name="btn09">09:00</string>
    <string name="btn10">10:00</string>
    <string name="btn11">11:00</string>
    <string name="btn12">12:00</string>
    <string name="btn13">13:00</string>
    <string name="btn14">14:00</string>
    <string name="btn15">15:00</string>
    <string name="btn16">16:00</string>
    <string name="btn17">17:00</string>
    <string name="btn18">18:00</string>
    <string name="btn19">19:00</string>
    <string name="btn20">20:00</string>
    <string name="btn21">21:00</string>
    <string name="btn22">22:00</string>
    <string name="btn23">23:00</string>
    <string name="timeSelectText">Bitte vier verschiedene Uhrzeiten auswählen. Pro Zeile kann nur eine Uhrzeit ausgewählt werden!</string>
    <string name="chill_time_left">0:15</string>
    <string name="chill_time">17:00Uhr</string>
    <string name="umfrage_time">17:00Uhr</string>
    <string name="btnOK">OK</string>
    <string name="firstChar">1. Ziffer: Dritter Buchstabe des Vornamens der Mutter</string>
    <string name="secondChar">2. Ziffer: Dritter Buchstabe des Vornamens des Vaters</string>
    <string name="thirdChar">3. Ziffer: Dritter Buchstabe des Geburtsortes</string>
    <string name="fourthChar">4. Ziffer: Dritter Buchstabe der aktuellen Straße (Hauptwohnsitz)
    </string>
    <string name="fifthChar">5. Ziffer: Dritter Buchstabe des Geburtsmonats</string>
    <string name="enterCode">Bitte Probandencode eingeben:</string>
    <string name="umfrageFirst">Mit wie vielen Interaktionspartnern hatten Sie heute schon Kontakt? Schätzen Sie bitte zusätzlich die Gesamtdauer der Kontakte ein.</string>
    <string name="umfrage1">Wieviele Kontakte hatten Sie seit dem letzten Ausfüllen der Umfrage?</string>
    <string name="umfrage2">Schätzen Sie außerdem die Dauer der Kontakte.</string>
    <string name="userinput_kontakt"></string>
    <string name="userinput_zeit"></string>
</resources>
