<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeSelectText"
            android:id="@+id/textView"
            android:textSize="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMon"
                android:id="@+id/buttonMon"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTue"
                android:id="@+id/buttonTue"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnWed"
                android:id="@+id/buttonWed"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnThu"
                android:id="@+id/buttonThe"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFri"
                android:id="@+id/buttonFri"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSat"
                android:id="@+id/buttonSat"
                android:textSize="35dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSun"
                android:id="@+id/buttonSun"
                android:textSize="35dp"/>
    </LinearLayout>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn09"
                    android:id="@+id/button09"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn10"
                    android:id="@+id/button10"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn11"
                    android:id="@+id/button11"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn12"
                    android:id="@+id/button12"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tableRow">

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn13"
                    android:id="@+id/button13"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn14"
                    android:id="@+id/button14"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn15"
                    android:id="@+id/button15"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tableRow2">

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn16"
                    android:id="@+id/button16"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn17"
                    android:id="@+id/button17"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn18"
                    android:id="@+id/button18"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn19"
                    android:id="@+id/button19"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tableRow3">

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn20"
                    android:id="@+id/button20"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn21"
                    android:id="@+id/button21"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn22"
                    android:id="@+id/button22"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn23"
                    android:id="@+id/button23"
                    android:onClick="timeSelect"
                    android:textSize="35dp"/>
        </TableRow>
    </TableLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOK"
            android:onClick="okTime"
            android:id="@+id/okButton"
            android:textSize="50dp"
            android:layout_marginTop="40dp"
            />

</LinearLayout>