<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="25dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Abbrechen"
            android:id="@+id/button2"
            android:layout_alignBottom="@+id/button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textSize="25dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:text="@string/umfrage1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:textSize="20dp"
            android:layout_below="@+id/textView6"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/umfrage2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Anzahl"
            android:id="@+id/textView4"
            android:textSize="25dp"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_marginTop="20dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/userinput_kontakt"
            android:digits="1234567890"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Dauer"
            android:id="@+id/textView5"
            android:textSize="25dp"
            android:layout_below="@+id/editText"
            android:layout_alignLeft="@+id/editText"
            android:layout_marginTop="15dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText2"
            android:textSize="30dp"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_marginTop="10dp"
            android:text="@string/userinput_zeit"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/umfrage_time"
            android:id="@+id/textView6"
            android:textSize="20dp"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"/>

</RelativeLayout>